Create a CodeGrade submission

--- a/main.css
+++ b/main.css
@@ -9,3 +9,53 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+#red {
+  border-top-color: #f00;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+}
+
+#orange {
+  border-top-color: #ffa500;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+}
+
+#yellow {
+  border-top-color: #ff0;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+}
+
+#green {
+  border-top-color: #00bc3f;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+}
+
+#blue {
+  border-top-color: #06f;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+
+}
+
+#indigo {
+  border-top-color: #8a2be2;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+}
+
+#violet {
+  border-top-color: #d300c9;
+  min-width: 20em;
+  min-height: 25em;
+  border-radius: 50%;
+}
